--- a/list.html
+++ b/list.html
@@ -6,17 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Gallery Demo</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" type="text/css" href="css/magnific-popup.css">
+    <script type="text/javascript" src="js/angular.min.js"></script>
     <!--[if lt IE 9]>
       <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
     <style type="text/css">
+    body {
+      padding-top: 70px; 
+    }
 
+    .thumb {
+      padding: 5px;
+    }
+
+    footer {
+      margin: 50px 0;
+    } 
     </style>
   </head>
-  <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+  <body ng-app="galleryApp">
+        <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -36,56 +47,19 @@
               </div>
           </div>
         </form>
-        </div>
+        </div><!--/.nav-collapse -->
       </div>
-    </nav> 
-
-    <div id="galleryCarousel" class="carousel slide" data-ride="carousel" style="margin-top:50px">
-      <!-- Indicators -->
-      <ol class="carousel-indicators">
-        <li data-target="#galleryCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#galleryCarousel" data-slide-to="1"></li>
-        <li data-target="#galleryCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img class="first-slide img-responsive" src="http://pic1.win4000.com/wallpaper/7/545353a84d30a.jpg" alt="First slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="second-slide img-responsive"  src="http://pic1.win4000.com/wallpaper/7/545353ab319a1.jpg" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
-            </div>
-          </div>
-        </div>
-        <div class="item">
-          <img class="third-slide img-responsive" src="http://pic1.win4000.com/wallpaper/7/545353ade876e.jpg" alt="Third slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#galleryCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#galleryCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div><!-- /.carousel -->
-
+    </nav>
 
     <div class="container-fluid" >
-
+        <div class="row-fluid" ng-controller="imageController">
+           <div ng-repeat="img in images" class="col-lg-2 col-md-3 col-xs-6 pictures" style="padding: 0 5px"  on-finish-render-filters>
+                <a  style="margin-bottom:10px;display:block" href="#">
+                    <img class="img-responsive" ng-src="{{img.thumbnail}}" alt="{{img.title}}" title="{{img.title}}">
+                </a>
+            </div>
+        </div>
+         <!-- Footer -->
         <footer class="clearfix">
             <div class="row-fluid">
                 <div class="col-lg-12 col-md-12 col-xs-12">
@@ -96,5 +70,42 @@
     </div>
     <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
+    <script type="text/javascript">
+        'use strict';
+        var app = angular.module('galleryApp', []);
+        app.controller('imageController', function($scope, $http) {
+          $http.get('images.json').success(function(data){
+            var len = data.length,
+                i = 0,
+                img = new Image();
+            for(; i < len; i++) {
+              img.src = data[i].thumbnail;
+            }
+            $scope.images = data;
+
+            $scope.$on('ngRepeatFinished', function (ngRepeatFinishedEvent) {
+                $('.pictures').magnificPopup();
+            });
+            
+          });
+
+        });
+
+        app.directive('onFinishRenderFilters', function ($timeout) {
+          return {
+            restrict: 'A',
+            link: function($scope, $element, $attr) {
+                    if ($scope.$last === true) {
+                        $timeout(function() {
+                            $scope.$emit('ngRepeatFinished');
+                        });
+                    }
+                  }
+            };
+        });
+
+        
+    </script>
   </body>
 </html>
