--- a/register.html
+++ b/register.html
@@ -12,7 +12,12 @@
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 <style type="text/css">
-
+body{
+  width: 100%;
+  height: 100%;
+  background:url(images/bg_1920x1080.jpg) no-repeat;
+  min-height:400px;
+}
 .btn {
   padding: 10px 20px;
   border: 0 none;
@@ -47,13 +52,13 @@
 }
 .reg-form{
   width: 300px;
-  padding: 10px;
+  padding:15px 15px 0 15px;
   background-color: #fff;
   position: absolute;
   top: 50%;
   left: 50%;
   margin-left:-150px;
-  margin-top:-120px;
+  margin-top:-135px;
   box-shadow: 0 2px 4px rgba(0,0,0,.5);
 }
 .login-link {
@@ -64,18 +69,43 @@ ul li{
   list-style: none;
 }
 
-.input-tooltip + .tooltip > .tooltip-inner {max-width: 300px;height: 40px;line-height: 40px;width: 200px}
-
+.input-tooltip + .tooltip > .tooltip-inner {
+  max-width: 300px;
+  text-align: left;
+  width: 240px;
+  height: 40px;
+  line-height:40px;
+}
+.reg-form-title{
+  font-size:14px;
+  font-weight: bold;
+  margin:0 0 20px 0;
+  padding:0;
+}
+.reg-form-title img{
+  display: inline-block;
+  height: 30px;
+  vertical-align: middle;
+}
+.reg-form-title span{
+  padding: 0 10px;
+  color: #666;
+  line-height: 30px;
+  height: 30px;
+  display: inline-block;
+  vertical-align: middle;
+}
 </style>
 </head>
-  <body style="background: url(images/bg.jpg) no-repeat;min-height:400px" ng-app="registerApp">
+  <body ng-app="registerApp">
          
-  <ul>
+  <ul class="reg-form" ng-controller="RegistrationController">
   <li>
-   <form class="form-group reg-form">
-            <input type="text" class="form-control reg-input input-tooltip" id="email" name="email" placeholder="Email Address" data-original-title="Please provide valid email address" data-placement="top" data-toggle="tooltip" >
-            <input type="password" class="form-control reg-input input-tooltip" id="password" name="password" placeholder="Password" data-original-title="Tooltip on top" data-placement="top" data-toggle="tooltip" >
-            <a href="#" class="login-link"> Already has an account?</a>
+   <h2 class="reg-form-title"><img src="images/logo.gif" alt=""><span>CREATE NEW ACCOUNT</span></h2>
+   <form class="form-group">
+            <input type="text" class="form-control reg-input input-tooltip" id="email" name="email" autocomplete="off" placeholder="Email Address" >
+            <input type="password" class="form-control reg-input input-tooltip" id="password" name="password" placeholder="Password" >
+            <a href="#" class="login-link">Already have an account?</a>
             <button type="button" class="btn btn-info sharp">REGISTER</button>
           </form>
   </li>
@@ -102,18 +132,20 @@ ul li{
     <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript">
-       $(function () {
+      /* $(function () {
             console.log($('.reg-input'));
             $('.reg-input').tooltip({
 
                   animation: true,
                   trigger: 'click' //触发tooltip的事件
             });
-        });
+        });*/
 
         'use strict';
         var app = angular.module('registerApp', []);
-       // app.controller()
+        app.controller('RegistrationController', function($scope) {
+            
+        });
     </script>
   </body>
 </html>
