--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gallery Demo</title>
+    <title>Gallery Login</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" >
     <script type="text/javascript" src="js/angular.min.js"></script>
     <!--[if lt IE 9]>
@@ -104,7 +104,7 @@ ul li{
    <form class="form-group">
       <input type="email" class="form-control reg-input input-tooltip" id="email" name="email" autocomplete="off" placeholder="Email Address" ng-model="email">
       <input type="password" class="form-control reg-input input-tooltip" id="password" name="password" placeholder="Password" >
-      <a href="#" class="login-link">Don't have an account?</a>
+      <a href="register.html" class="login-link">Don't have an account?</a>
       <button type="button" class="btn btn-info sharp" ng-click="login()">LOGIN</button>
     </form>
   </div>
