--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Gallery Demo</title>
+    <title>Gallery Register</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" >
     <script type="text/javascript" src="js/angular.min.js"></script>
     <!--[if lt IE 9]>
@@ -104,19 +104,11 @@ ul li{
    <form class="form-group">
       <input type="email" class="form-control reg-input input-tooltip" id="email" name="email" autocomplete="off" placeholder="Email Address" ng-model="email" ng-blur="checkEmail()" value="">
       <input type="password" class="form-control reg-input input-tooltip" id="password" name="password" placeholder="Password" ng-model="password"  >
-      <a href="#" class="login-link">Already have an account?</a>
+      <a href="login.html" class="login-link">Already have an account?</a>
       <button type="button" class="btn btn-info sharp" ng-click="register()">REGISTER</button>
     </form>
   </div>
-   <!--  <li>
-    <form class="form-group reg-form" style="display:none">
-            <input type="text" class="form-control reg-input" id="email" name="email" placeholder="Email Address"  >
-            <input type="password" class="form-control reg-input" id="password" name="password" placeholder="Password">
-            <a href="#" class="login-link">Do you have an account?</a>
-            <button type="button" class="btn btn-info sharp">LOGIN</button>
-          </form>
-</li> -->
-          
+
     <script type="text/javascript" src="js/jquery-1.10.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/md5.js"></script>
